# sshclient

./: CMakeLists.txt  build.bat  credentials.cpp  credentials.h  main.cpp  mysql.cpp  mysql.h  ssh.cpp  ssh.h
src/: credentials.cpp  credentials.h  main.cpp  mysql.cpp  mysql.h  ssh.cpp  ssh.h
